# assemblyline-service-triage-sandbox

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .release-version  Dockerfile  LICENSE  README.md  codecov.yml  helper.py  pyproject.toml  requirements.txt  service.py  service_manifest.yml
.github/: dependabot.yml
.github/workflows/: _publish.yml  _quality.yml  build-docker.yml  ci.yml  codeql.yml  publish-dev.yml  python-tests.yml  release-stable.yml
src/: helper.py  service.py
src/triage_sandbox/: constants.py  models.py  network.py  report.py  service.py
tests/: conftest.py  test_dynamic_report.py  test_helper.py  test_malware_config.py  test_sample_and_result.py  test_service_functions.py  test_service_integration.py
tests/triage_responses/: 240202-3y8f7sefen-behavioral1-report_triage.json  240202-3y8f7sefen-behavioral2-report_triage.json  240202-3y8f7sefen.json
