[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "triage_sandbox"
version = "0.1.0"
requires-python = ">=3.11.0,<3.13.0"
dependencies = [
    "assemblyline-service-utilities>=4.6.1.2",
    "assemblyline-v4-service>=4.7.4.3",
    "hatching-triage>=0.2.0",
    "retrying>=1.4.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/triage_sandbox"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
]
[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E203"]

[tool.ruff.format]
line-ending = "auto"
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
pythonpath = ["src", "tests"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.bandit]
targets = ["src"]
exclude_dirs = ["tests"]

[tool.ty.environment]
python-version = "3.12"
python-platform = "linux"
root = ["./src", "./tests"]

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.terminal]
output-format = "github"
error-on-warning = true

[dependency-groups]
dev = [
    "bandit[toml]",
    "pip-audit",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "requests-mock",
    "ruff",
    "ty",
]
